--- a/Voltage_Monitor/ADCMonitor/Application/Configs/GUIWaveform.config
+++ b/Voltage_Monitor/ADCMonitor/Application/Configs/GUIWaveform.config
@@ -1,11 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <property>
+  <viewerproperty>
+    <!--________Viewer Properties_________-->
+    <!--Voltage Bar Width-->
     <item key="VBW" value="20" />
+    <!--Time Bar Height-->
     <item key="TBH" value="50" />
-    <item key="ZVH" value="70" />
-    <item key="TUP" value="70" />
+    <!--Pixel Per Bit-->
+    <item key="MinPPB" value="0.1" />
+    <item key="MinTUP" value="2" />
+    <item key="MaxTUP" value="34" />
+    <!--Time Unit Pixel-->
+    <item key="TUP" value="13" />
+    <!--Voltage Bar Scale-->
+    <item key="VBS" value="0.95" />
     <item key="xdpi" value="96.0" />
     <item key="ydpi" value="96.0" />
-  </property>
+    
+    <!--Pen Color-->
+    
+    <!--________Viewer Properties_________-->
+  </viewerproperty>
+  <mcuproperty>
+    <!--____________MCU Properties____________-->
+    <item key="ADCMaxVolt" value="3.3" />
+    <item key="ADCMinVolt" value="0.0" />
+    <item key="ADCResolution" value="12" />
+    <!--____________MCU Properties____________-->
+  </mcuproperty>
 </configuration>
