--- a/Voltage_Monitor/ADCMonitor/ADCMonitor/ADCMonitor.csproj
+++ b/Voltage_Monitor/ADCMonitor/ADCMonitor/ADCMonitor.csproj
@@ -92,7 +92,7 @@
     <Compile Include="View\ADCMonitorView.xaml.cs">
       <DependentUpon>ADCMonitorView.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -100,7 +100,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
