--- a/TCPIP_IPC/IPCService/IPCService.csproj
+++ b/TCPIP_IPC/IPCService/IPCService.csproj
@@ -42,9 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="ClientPackage.cs" />
+    <Compile Include="ExtensionService.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TCPSpec.cs" />
+    <Compile Include="TCPSpecIni.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
