--- a/Voltage_Monitor/ADCMonitor/Lib/WaveformDrawingContext/GUIWaveform.config
+++ b/Voltage_Monitor/ADCMonitor/Lib/WaveformDrawingContext/GUIWaveform.config
@@ -3,7 +3,7 @@
   <viewerproperty>
     <!--________Viewer Properties_________-->
     <!--Voltage Bar Width-->
-    <item key="VBW" value="20" />
+    <item key="VBW" value="50" />
     <!--Time Bar Height-->
     <item key="TBH" value="50" />
     <!--Pixel Per Bit-->
@@ -26,6 +26,8 @@
     <item key="ADCMaxVolt" value="3.3" />
     <item key="ADCMinVolt" value="0.0" />
     <item key="ADCResolution" value="12" />
+    <!--Unit ms-->
+    <item key="ADCCapturePeriod" value="5" />
     <!--____________MCU Properties____________-->
   </mcuproperty>
 </configuration>
