--- a/Voltage_Monitor/ADCMonitor/Post/Post.vcxproj
+++ b/Voltage_Monitor/ADCMonitor/Post/Post.vcxproj
@@ -100,31 +100,18 @@ copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\ADCMonitor.pdb" "$(SolutionD
     <NMakeOutput>Post.exe</NMakeOutput>
     <NMakePreprocessorDefinitions>_DEBUG;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
     <NMakeBuildCommandLine>copy "$(SolutionDir)Lib\WaveformDrawingContext\GUIWaveform.config" "$(SolutionDir)Application\Configs"
-copy "$(SolutionDir)Lib\WaveformDrawingContext\bin\$(Configuration)\GUIWaveform.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)Lib\WaveformDrawingContext\bin\$(Configuration)\GUIWaveform.pdb" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)Lib\GlobalPath\bin\$(Configuration)\GlobalPath.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)Lib\GlobalPath\bin\$(Configuration)\GlobalPath.pdb" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\CommonServiceLocator.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\GalaSoft.MvvmLight.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\GalaSoft.MvvmLight.Extras.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\GalaSoft.MvvmLight.Platform.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\System.Windows.Interactivity.dll" "$(SolutionDir)Application\Libs"
+copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\*.dll" "$(SolutionDir)Application\Libs"
+copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\*.pdb" "$(SolutionDir)Application\Libs"
 copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\ADCMonitor.exe" "$(SolutionDir)Application\"
 copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\ADCMonitor.exe.config" "$(SolutionDir)Application\"
 copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\ADCMonitor.pdb" "$(SolutionDir)Application\"</NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>copy "$(SolutionDir)Lib\WaveformDrawingContext\GUIWaveform.config" "$(SolutionDir)Application\Configs"
-copy "$(SolutionDir)Lib\WaveformDrawingContext\bin\$(Configuration)\GUIWaveform.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)Lib\WaveformDrawingContext\bin\$(Configuration)\GUIWaveform.pdb" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)Lib\GlobalPath\bin\$(Configuration)\GlobalPath.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)Lib\GlobalPath\bin\$(Configuration)\GlobalPath.pdb" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\CommonServiceLocator.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\GalaSoft.MvvmLight.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\GalaSoft.MvvmLight.Extras.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\GalaSoft.MvvmLight.Platform.dll" "$(SolutionDir)Application\Libs"
-copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\System.Windows.Interactivity.dll" "$(SolutionDir)Application\Libs"
+copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\*.dll" "$(SolutionDir)Application\Libs"
+copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\*.pdb" "$(SolutionDir)Application\Libs"
 copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\ADCMonitor.exe" "$(SolutionDir)Application\"
 copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\ADCMonitor.exe.config" "$(SolutionDir)Application\"
 copy "$(SolutionDir)ADCMonitor\bin\$(Configuration)\ADCMonitor.pdb" "$(SolutionDir)Application\"</NMakeReBuildCommandLine>
+    <NMakeCleanCommandLine>del /q $(SolutionDir)Application\Libs\*</NMakeCleanCommandLine>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <NMakeOutput>Post.exe</NMakeOutput>
