--- a/Voltage_Monitor/ADCMonitor/ADCMonitor/ADCMonitor.csproj
+++ b/Voltage_Monitor/ADCMonitor/ADCMonitor/ADCMonitor.csproj
@@ -85,6 +85,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Progress\Telerik UI for WPF R3 2022\Binaries\WPF45\Telerik.Windows.Controls.Navigation.dll</HintPath>
     </Reference>
+    <Reference Include="Telerik.Windows.Controls.VirtualGrid, Version=2022.3.1109.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Progress\Telerik UI for WPF R3 2022\Binaries\WPF45\Telerik.Windows.Controls.VirtualGrid.dll</HintPath>
+    </Reference>
     <Reference Include="Telerik.Windows.Data, Version=2022.3.1109.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Progress\Telerik UI for WPF R3 2022\Binaries\WPF45\Telerik.Windows.Data.dll</HintPath>
@@ -115,6 +119,9 @@
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Monitor\ADCValues_UserControl.xaml.cs">
+      <DependentUpon>ADCValues_UserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Monitor\WaveformPropertyGrid_UserControl.xaml.cs">
       <DependentUpon>WaveformPropertyGrid_UserControl.xaml</DependentUpon>
     </Compile>
@@ -139,6 +146,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="View\MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Monitor\ADCValues_UserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
